# business-income-api

./: .env.example  .env.prod  .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  ingresos_diarios.py  ingresos_grafica.py  ingresos_rango.py  reportes.py  test_errors.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: connection.py  postgres.py
app/schemas/: auth.py  error_log.py  ingreso.py  reporte.py
app/utils/: pdf_generator.py
tests/: conftest.py  test_main.py
tests/test_core/: test_config.py  test_dependencies.py  test_exceptions.py  test_logging.py  test_middleware.py  test_postgres.py  test_security.py
tests/test_endpoints/: test_auth.py  test_ingresos.py  test_reportes.py  test_test_errors.py
tests/test_schemas/: test_error.py
